# omni-flasher_fw

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build_all.bat  conftest.py  partitions.csv  pytest.ini  pytest_main.py  sdkconfig.defaults
assets/: assets.h  fonts_gen.bat
assets/remote_screen/c/: flashrom_logo.c  usb_icon.c  wifi_icon.c
assets/settings_screen/c/: sun_icon.c
src/components/buzzer/: buzzer.c  buzzer.h
src/components/config/: config.c  config.h
src/components/key/: key.c  key.h
src/components/serprog/: serprog.c  serprog.h
src/components/utils/: utils.h
src/main/: CMakeLists.txt  board.c  board.h  idf_component.yml  lvgl_app.c  lvgl_app.h  lvgl_benchmark.c  lvgl_benchmark.h  main.c  proj_config.h
src/screens/: main_menu_screen.c  main_menu_screen.h  remote_screen.c  remote_screen.h  serial_screen.c  serial_screen.h  settings_screen.c  settings_screen.h  startup_screen.c  startup_screen.h  sys_info_screen.c  sys_info_screen.h
src/screens/components/lv_exmenu/: lv_exmenu.c  lv_exmenu.h
src/screens/remote_screen/: serprog_screen.c  serprog_screen.h
translations/: en-US.yml  zh-CN.yml
