file(
    GLOB
    SRC_FILES
    *.c
    ../components/*.c
    ../components/utils/*.c
    ../components/key/*.c
    ../screens/*.c
)

idf_component_register(
    SRCS
        ${SRC_FILES}
    INCLUDE_DIRS
        .
        ../components
        ../components/utils
        ../components/key
        ../screens
    PRIV_REQUIRES
        esp_driver_gpio
        spi_flash
        nvs_flash
        esp_timer
        app_update
)
